style: fixed icon envelope not visible on wells

--- a/app/styles/wells.less
+++ b/app/styles/wells.less
@@ -46,7 +46,8 @@
 	transition: opacity 500ms ease;
 }
 
-.collapsed .well .rollup, .well .rollupOnly, .well .icon-envelope {
+.collapsed .well .rollup,
+.well .rollupOnly {
 	opacity: 0;
 	transition: opacity 500ms ease;
 }
@@ -54,8 +55,5 @@
 .row:hover .well {
 	a:not(.btn) {
 		color: #428bca;
-	}
-	.icon-envelope {
-		opacity: 1;
 	}
 }
